<resources>
    <string name="app_name">SimpleAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">가계부</string>
    <string name="menu_gallery">통계</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">환경설정</string>
    <string name="menu_send">백업/복원</string>

    <!--요일-->
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <string name="income">수입</string>
    <string name="consume">지출</string>
    <string name="balanced_carried_over">정산</string>
    <string name="total_amount">총액</string>
    <string name="won">원</string>
    <string name="who">에게</string>
    <string name="detail">세부내용</string>
    <string name="money_won">%1$s원</string>
    <string name="my_gagebu">내 가계부</string>
    <string name="arr_down">▼</string>

</resources>
