<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@color/income"
            android:gravity="center"
            android:textColor="@color/color_ffffff"
            android:textSize="20sp"/>
        <ImageButton
            android:id="@+id/stat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/piechart" />
        <ImageButton
            android:id="@+id/invoice"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/invoice" />
    </RelativeLayout>
    <!-- 총액, 수입액, 지출액, 이월 금액 상단 표시-->
    <LinearLayout
        android:id="@+id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:layout_alignParentStart="true"
        android:background="@color/background"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="1"
        android:layout_alignParentLeft="true">
        <!-- 총액 & 이월 금액 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">
                <!-- 총액 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount" />

                    <TextView
                        android:id="@+id/txt_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="100,000원" />
                </LinearLayout>
                <!-- 이월 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balanced_carried_over" />

                    <TextView
                        android:id="@+id/txt_balance_carried_over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="10,000원" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <!-- 수입액 & 지출액 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">
                <!-- 수입 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income" />

                    <TextView
                        android:id="@+id/txt_income_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="100,000원"
                        android:textColor="@color/income" />
                </LinearLayout>
                <!-- 지출 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consume" />

                    <TextView
                        android:id="@+id/txt_consume_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="10,000원"
                        android:textColor="@color/consume" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- 요일 표시 -->
    <LinearLayout
        android:id="@+id/lin_days"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:weightSum="7"
        android:layout_below="@+id/lin_top">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="0.3dp"
                android:background="@color/ccc"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_days"
        android:orientation="vertical">
        <View
            android:id="@+id/view_line_1"
            android:layout_below="@id/lin_days"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/ccc"
            android:layout_gravity="bottom"/>

        <GridView
            android:id="@+id/gridview"
            android:layout_below="@id/view_line_1"
            android:layout_above="@+id/view_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:verticalSpacing="0.3dp"
            android:horizontalSpacing="0.3dp"
            android:stretchMode="columnWidth"
            android:numColumns="7" >
        </GridView>
        <View
            android:id="@+id/view_line_2"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="0.3dp"
            android:background="@color/ccc"
            android:layout_gravity="bottom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="체크리스트"
            android:layout_gravity="center"/>
    </LinearLayout>
    <ListView
        android:id="@+id/checkList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_cal"/>
<!--    <ListView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/lin_cal">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="10px"-->
<!--            android:orientation="horizontal">-->
<!--            <CheckBox-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:foregroundGravity="center" />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center|left"-->
<!--                android:layout_weight="5"-->
<!--                android:text="누구한테 돈 보내기"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10px"-->
<!--                android:gravity="center|right"-->
<!--                android:layout_weight="2"-->
<!--                android:text="언제까지"/>-->
<!--        </LinearLayout>-->
<!--    </ListView>-->
</RelativeLayout>