<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@color/income"
            android:gravity="center"
            android:textColor="@color/color_ffffff"
            android:text="정산"
            android:textSize="20sp"/>
        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/backward" />
    </RelativeLayout>
    <!-- content -->
    <RelativeLayout
        android:layout_below="@id/bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <ScrollView
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- 각각 항목 -->
                <!-- 날짜 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_centerVertical="true"
                            android:textSize="18.3sp"
                            android:textColor="@drawable/sel_txt"
                            android:text="2019년 12월 8일"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"/>
                        <TextView
                            android:id="@+id/txt_time"
                            android:layout_marginLeft="25dp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/txt_date"
                            android:textSize="18.3sp"
                            android:textColor="@drawable/sel_txt"
                            android:text="13:27"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"/>
                        <TextView
                            android:id="@+id/txt"
                            android:layout_marginLeft="5dp"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/txt_time"
                            android:textSize="18.3sp"
                            android:textColor="@drawable/sel_txt"
                            android:text="까지"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"/>
                    </RelativeLayout>
                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:background="@color/disabled"/>
                </RelativeLayout>
                <!-- 금액 -->
                <RelativeLayout
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <Spinner
                        android:id="@+id/spin_category"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    </Spinner>
                    <EditText
                        android:id="@+id/edit_who"
                        android:hint="지언이"
                        android:inputType="number"
                        android:gravity="right"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/spin_category"

                        android:layout_toLeftOf="@id/who_won"
                        android:layout_centerVertical="true"
                        android:background="@color/transparent"
                        android:textColorHint="@color/disabled"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/who_won"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/who"
                        android:textSize="15.3sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/disabled"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <ImageView
                        android:id="@+id/img_cost_lbl"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_add_circle_gray"/>
                    <EditText
                        android:id="@+id/edit_cost"
                        android:hint="0"
                        android:inputType="number"
                        android:gravity="right"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/img_cost_lbl"
                        android:layout_alignRight="@+id/txt_won"
                        android:layout_centerVertical="true"
                        android:background="@color/transparent"
                        android:textColorHint="@color/disabled"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txt_won"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/won"
                        android:textSize="15.3sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/disabled"/>
                </RelativeLayout>
                <!-- 세부내역 -->
                <RelativeLayout
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <ImageView
                        android:id="@+id/img_detail_lbl"
                        android:layout_centerVertical="true"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_chk_circle_gray"/>
                    <EditText
                        android:id="@+id/edit_detail"
                        android:layout_centerVertical="true"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/detail"
                        android:background="@color/transparent"
                        android:textColorHint="@color/disabled"
                        android:gravity="left"
                        android:layout_toRightOf="@+id/img_detail_lbl"
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <!--추가 버튼-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="추가하기"
                        android:textColor="#ffffff"
                        android:backgroundTint="@color/income"
                        />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>